--- a/pom.xml
+++ b/pom.xml
@@ -11,18 +11,27 @@
     <name>cookbook-server</name>
     <description>Server portion of cookbook project(s)</description>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <hibernate.jpa.version>1.0.0.Final</hibernate.jpa.version>
+        <hibernate.core.version>5.2.10.Final</hibernate.core.version>
+        <java.version>1.8</java.version>
+        <lombok.version>1.16.16</lombok.version>
+        <maven.plugin.version>1.1.3</maven.plugin.version>
+        <mysema.version>0.2.4</mysema.version>
+        <querydsl.version>3.7.4</querydsl.version>
+        <springframework.version>1.5.4.RELEASE</springframework.version>
+        <spring.data.version>1.11.4.RELEASE</spring.data.version>
+    </properties>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-    </properties>
 
     <dependencies>
         <!-- Spring Boot-->
@@ -51,39 +60,39 @@
         <!-- Hibernate -->
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.0-api</artifactId>
-            <version>1.0.1.Final</version>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>${hibernate.jpa.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>4.3.11.Final</version>
+            <version>${hibernate.core.version}</version>
         </dependency>
 
         <!-- Spring Data-->
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
-            <version>1.11.4.RELEASE</version>
+            <version>${spring.data.version}</version>
         </dependency>
 
         <!-- Query DSL -->
         <dependency>
             <groupId>com.mysema.commons</groupId>
             <artifactId>mysema-commons-lang</artifactId>
-            <version>0.2.4</version>
+            <version>${mysema.version}</version>
         </dependency>
         <dependency>
             <groupId>com.mysema.querydsl</groupId>
             <artifactId>querydsl-core</artifactId>
-            <version>3.4.3</version>
+            <version>${querydsl.version}</version>
         </dependency>
 
         <!-- Util -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.16</version>
+            <version>${lombok.version}</version>
         </dependency>
 
     </dependencies>
@@ -98,7 +107,7 @@
             <plugin>
                 <groupId>com.mysema.maven</groupId>
                 <artifactId>apt-maven-plugin</artifactId>
-                <version>1.1.3</version>
+                <version>${maven.plugin.version}</version>
                 <executions>
                     <execution>
                         <goals>
