api. Add basic api code.

--- a/pom.xml
+++ b/pom.xml
@@ -98,11 +98,25 @@
             <version>${qdsl-version}</version>
         </dependency>
 
-        <!-- Util -->
+        <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.16</version>
+        </dependency>
+
+        <!-- Mapper -->
+        <dependency>
+            <groupId>ma.glasnost.orika</groupId>
+            <artifactId>orika-core</artifactId>
+            <version>1.4.6</version>
+        </dependency>
+
+        <!-- HATEOAS -->
+        <dependency>
+            <groupId>org.springframework.hateoas</groupId>
+            <artifactId>spring-hateoas</artifactId>
+            <version>0.19.0.RELEASE</version>
         </dependency>
 
         <!-- Hibernate -->
