--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -9,3 +9,6 @@ hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.format_sql=true
 hibernate.hbm2ddl.auto=validate
 hibernate.show_sql=false
+
+#Mapper Configuration
+mapper.package=com.github.cekmorse.api.dto
